# parqour

./: .envrc  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cd.yml
src/: action.rs  app.rs  args.rs  cli.rs  components.rs  error.rs  lib.rs  main.rs  prelude.rs  tui.rs  utils.rs
src/components/: fps.rs  home.rs
src/tui/: command.rs  event.rs  mod.rs  state.rs  ui.rs
