[package]
name = "parqour"
version = "0.1.0"
edition = "2021"
authors = ["Jan Marais"]

[dependencies]
arrow = { version = "52.0.0", default-features = false }
clap = { version = "4.5.7", features = ["derive", "cargo", "string"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
directories = "5.0.1"
lazy_static = "1.4.0"
parquet = "52.0.0"
ratatui = "0.26.3"
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
