[package]
name = "parqour"
version = "0.1.0"
edition = "2021"
authors = ["Jan Marais"]

[dependencies]
arrow = { version = "52.0.0", default-features = false }
clap = { version = "4.5.7", features = ["derive", "cargo", "string"] }
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
directories = "5.0.1"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
parquet = "52.0.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
signal-hook = "0.3.17"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
